--- a/RainyShiny/Base.lproj/Main.storyboard
+++ b/RainyShiny/Base.lproj/Main.storyboard
@@ -88,18 +88,18 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a4i-D6-zJE" id="ktc-2d-5jl">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OqK-Bg-AFK">
-                                                    <rect key="frame" x="8" y="14" width="50" height="50"/>
+                                                    <rect key="frame" x="7" y="14" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="Cki-QX-USQ"/>
                                                         <constraint firstAttribute="width" constant="50" id="nvk-bs-93f"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9Up-Cg-0dV">
-                                                    <rect key="frame" x="66" y="14" width="283" height="50"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9Up-Cg-0dV">
+                                                    <rect key="frame" x="74" y="19" width="283" height="50"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="lg5-jF-e8o">
                                                             <rect key="frame" x="0.0" y="0.0" width="141.5" height="50"/>
